# CMakeProjectTemplate

./: CMakeLists.txt  ProjectStructure.txt  build.sh
CMakeProjectTemplate/: CMakeLists.txt  main.cpp
DriverProject/: CMakeLists.txt  main.cpp
DriverProject2/: CMakeLists.txt  main.cpp
Libs/Lib1/: CMakeLists.txt
Libs/Lib1/include/lib1/: lib1.hpp
Libs/Lib1/src/: lib1.cpp
Libs/Lib2/: CMakeLists.txt
Libs/Lib2/include/lib2/: lib2.hpp
Libs/Lib2/src/: lib2.cpp
Libs/SharedLib/: CMakeLists.txt
Libs/SharedLib/include/shared_lib/: shared_lib.hpp
Libs/SharedLib/src/: shared_lib.cpp
